--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-us">
 
+<section id="total">
 <head>
     <title>Easier Layout</title>
     <link rel="stylesheet" type="text/css" href="style.css">
@@ -27,7 +28,7 @@
             &lt;article&gt;
     </section>
 
-    <section id="h1,h2,h3">
+    <section id="h">
             &lt;h1,h2,h3&gt;
     </section>
 
@@ -38,5 +39,8 @@
     <footer>
         &lt;footer&gt;
     </footer>
-   
 </body>
+
+</section>
+
+
