--- a/index.html
+++ b/index.html
@@ -9,35 +9,35 @@
 
 <body>
     <header>
-        &lt;header&gt;     
+        header     
     </header>
 
     <section id="nav">
-            &lt;nav&gt;
+            nav
     </section>
 
     <section id="aside">
-            &lt;aside&gt;
+            aside
     </section>
 
     <section id="section">
-            &lt;section&gt;
+            section
     </section>
 
     <section id="article">
-            &lt;article&gt;
+            article
     </section>
 
     <section id="h">
-            &lt;h1,h2,h3&gt;
+            h1,h2,h3
     </section>
 
     <section id="p">
-        &lt;p&gt;
+        p
     </section>
 
     <footer>
-        &lt;footer&gt;
+        footer
     </footer>
 </body>
 
