--- a/index.html
+++ b/index.html
@@ -1,46 +1,42 @@
 <!DOCTYPE html>
 <html lang="en-us">
 
-<section id="total">
+
+
 <head>
     <title>Easier Layout</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
-    <header>
-        header     
-    </header>
+    <div id="total">
+        <header>
+            <p>header</p>
+        </header>
 
-    <section id="nav">
-            nav
-    </section>
+        <div id="nav">
+            <p>nav</p>
+        </div>
 
-    <section id="aside">
-            aside
-    </section>
+        <div id="aside">
+            <p>aside</p>
+        </div>
 
-    <section id="section">
-            section
-    </section>
+        <div id="section">
+            <p>section</p>
+            <div id="article">
+                article    
+                <div id="h">
+                    <h3>h1,h2,h3</h3>
+                    <p>p</p>
+                </div>
+            </div>
+        </div>
 
-    <section id="article">
-            article
-    </section>
-
-    <section id="h">
-            h1,h2,h3
-    </section>
-
-    <section id="p">
-        p
-    </section>
-
-    <footer>
-        footer
-    </footer>
+        <footer>
+            footer
+        </footer>
+    </div>
 </body>
 
-</section>
-
-
+</html>
